--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,46 @@
-.fancy-header {
-    color: purple;
+
+
+/*Main Elements*/
+* {
+    font-family: 'Ubuntu', "Times New Roman", sans-serif;
 }
+h2, h3, h4, h5, h6 {
+    color: darkblue;
+    text-decoration: underline;
+}
+
+li {
+    list-style-type: square;
+}
+
+table {
+    width: 50%;
+}
+
+tr {
+    height: 50px;
+}
+table, td, tr, th {
+    font-family: 'Merriweather', sans-serif;
+    border: 1px black solid;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+a:hover {
+    text-transform: uppercase;
+
+}
+
+/*classes*/
+
+.fancy-header {
+    color: lightgrey;
+    background-image: url("../img/space.jpeg");
+    background-size: 300px;
+    text-align: center;
+}
+
+
+
+
