--- a/flexbox-cards/flexbox-cards.css
+++ b/flexbox-cards/flexbox-cards.css
@@ -67,8 +67,11 @@ a {
 
 .container {
     /* This is a flex container */
+    display: flex;
+    align-items: center;
 }
 
 .card {
     /* This is a flex item */
+    flex-basis: 100%;
 }
