--- a/css/flexbox-nav-exercise.css
+++ b/css/flexbox-nav-exercise.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: 'Montserrat', 'Work Sans', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     color: black;
     font-weight: bold;
     margin: 0;
@@ -16,10 +16,13 @@ nav {
     background: #C1C1C1;
 }
 a {
-    display: inline-block;
     text-decoration: none;
 }
 a:hover {
+    color: blue;
+}
+
+i:hover {
     color: blue;
 }
 
@@ -30,7 +33,6 @@ ul {
 }
 li {
     list-style: none;
-
 }
 
 ul li:not(.logo) {
@@ -41,25 +43,26 @@ ul li:not(.logo) {
 
 .logo {
     font-size: 3em;
+    font-family: 'Montserrat', sans-serif;
 }
-ul li:nth-child(5) {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-/* Bonus ways to center Logo*/
-/*ul li:nth-child(4) {*/
+/*ul li:nth-child(5) {*/
+/*    margin-left: auto;*/
 /*    margin-right: auto;*/
 /*}*/
 
-/*ul li:nth-child(6) {*/
-/*    margin-left: auto;*/
-/*}*/
+/* Bonus ways to center Logo*/
+ul li:nth-child(4) {
+    margin-right: auto;
+}
 
-/*.logo {*/
-/*    position: relative;*/
-/*    right: 50px;*/
-/*}*/
+ul li:nth-child(6) {
+    margin-left: auto;
+}
+
+.logo {
+    position: relative;
+    right: 50px;
+}
 
 /* Second bonus to center Logo */
 /*.logo {*/
