--- a/css/mondrian.css
+++ b/css/mondrian.css
@@ -1,19 +1,31 @@
 body {
-    margin: 0;
     padding: 0;
-    height: 100%;
+    margin: 0;
+    height: 100vh;
+    width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    background: white;
+
 }
 
+body>div {
+    width: 25%;
+}
 .grid-container {
+
     height: 500px;
     width: 500px;
-    display: inline-grid;
+    display: grid;
     grid-template: repeat(8, 1fr) / repeat(8, 1fr);
     grid-gap: 8px;
     background: black;
-    border: black 10px solid;
+    border: white 8px solid;
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px;
+
 }
 
 .blue-1 {
